ICP 4 inital commit

--- a/ICP3_B.ipynb
+++ b/ICP3_B.ipynb
@@ -859,8 +859,8 @@
    "metadata": {
     "id": "NwrFYbS7kHZL",
     "ExecuteTime": {
-     "end_time": "2025-07-14T20:18:30.720519Z",
-     "start_time": "2025-07-14T20:18:30.715408Z"
+     "end_time": "2025-07-14T23:27:33.990051Z",
+     "start_time": "2025-07-14T23:27:33.981222Z"
     }
    },
    "source": [
@@ -875,32 +875,23 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\$'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\$'\n",
-      "/var/folders/0h/djpwhhxd7pggqrh82j0jyy700000gn/T/ipykernel_56817/1215620216.py:2: SyntaxWarning: invalid escape sequence '\\$'\n",
+      "/var/folders/0h/djpwhhxd7pggqrh82j0jyy700000gn/T/ipykernel_58429/1215620216.py:2: SyntaxWarning: invalid escape sequence '\\$'\n",
       "  car_data['Price'] = car_data['Price'].str.replace('[\\$\\,]','',regex=True).astype(float)\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0     4000.0\n",
-       "1     5000.0\n",
-       "2     7000.0\n",
-       "3    22000.0\n",
-       "4     3500.0\n",
-       "5     4500.0\n",
-       "6     7500.0\n",
-       "7     7000.0\n",
-       "8     6250.0\n",
-       "9     9700.0\n",
-       "Name: Price, dtype: float64"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'car_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Remove the symbols, the final two numbers from the 'Price' column and convert it to numbers\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m car_data[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPrice\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m car_data[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPrice\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mstr\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m[\u001B[39m\u001B[38;5;124m\\\u001B[39m\u001B[38;5;124m$\u001B[39m\u001B[38;5;124m\\\u001B[39m\u001B[38;5;124m,]\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m,regex\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\u001B[38;5;241m.\u001B[39mastype(\u001B[38;5;28mfloat\u001B[39m)\n\u001B[1;32m      3\u001B[0m car_data[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPrice\u001B[39m\u001B[38;5;124m'\u001B[39m]\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'car_data' is not defined"
+     ]
     }
    ],
-   "execution_count": 61
+   "execution_count": 2
   },
   {
    "cell_type": "code",
