ICP 4 finish commit

--- a/ICP4.ipynb
+++ b/ICP4.ipynb
@@ -26,6 +26,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Creating a DataFrame from a given dictionary\n",
     "data = {\n",
     "    'ID': np.arange(1, 1000001),  # 1 million IDs\n",
     "    'Value': np.random.rand(1000000),  # 1 million random values\n",
@@ -292,7 +293,7 @@
     }
    },
    "cell_type": "code",
-   "source": "df['Value']",
+   "source": "df['Value'] #Access a column “Value”",
    "id": "2fea70a21f31ccb5",
    "outputs": [
     {
@@ -329,7 +330,9 @@
    "cell_type": "code",
    "source": [
     "df.rename(columns={'ID': 'ID number', 'Value': 'Random Value', 'Category': 'Choice'}, inplace=True)\n",
-    "df.head(5)"
+    "df.head(5)\n",
+    "#Modify columns in the DataFrame with names (ID number, Random value, Choice) and show output\n",
+    "#for first five rows"
    ],
    "id": "a4551ad358ca94e2",
    "outputs": [
@@ -523,7 +526,7 @@
    "cell_type": "code",
    "source": [
     "data_csv = pd.read_csv('./datasets_ICP4/data.csv')\n",
-    "data_csv"
+    "data_csv #Read the provided CSV file ‘data.csv’"
    ],
    "id": "94bb5fb483200b1e",
    "outputs": [
@@ -1930,7 +1933,7 @@
     }
    },
    "cell_type": "code",
-   "source": "data_csv.describe()",
+   "source": "data_csv.describe() #Show the basic statistical description about the data.",
    "id": "d9f300e3717c66db",
    "outputs": [
     {
@@ -2048,7 +2051,7 @@
     }
    },
    "cell_type": "code",
-   "source": "data_csv.isnull().sum()",
+   "source": "data_csv.isnull().sum()#check null values",
    "id": "d26decc00b2df7ea",
    "outputs": [
     {
@@ -2078,7 +2081,7 @@
    "cell_type": "code",
    "source": [
     "data_csv['Calories'] = data_csv['Calories'].fillna(data_csv['Calories'].mean())\n",
-    "data_csv.isnull().sum()"
+    "data_csv.isnull().sum() #replace null values"
    ],
    "id": "ff95316423aa5367",
    "outputs": [
@@ -2107,7 +2110,7 @@
     }
    },
    "cell_type": "code",
-   "source": "data_csv[['Calories', 'Duration']].agg(['min', 'max', 'count', 'mean'])",
+   "source": "data_csv[['Calories', 'Duration']].agg(['min', 'max', 'count', 'mean']) #using agg func",
    "id": "7dcaf969dd0f7c56",
    "outputs": [
     {
@@ -2183,7 +2186,7 @@
     }
    },
    "cell_type": "code",
-   "source": "data_csv[(data_csv['Calories'] >= 500) & (data_csv['Calories'] <= 1000)]\n",
+   "source": "data_csv[(data_csv['Calories'] >= 500) & (data_csv['Calories'] <= 1000)] #filter\n",
    "id": "64bfc197b7ee822e",
    "outputs": [
     {
@@ -2493,7 +2496,7 @@
    "cell_type": "code",
    "source": [
     "df_modified = data_csv.drop('Maxpulse', axis=1)\n",
-    "df_modified"
+    "df_modified #new df with drop"
    ],
    "id": "b25314c4fe186db2",
    "outputs": [
@@ -3732,7 +3735,7 @@
    "cell_type": "code",
    "source": [
     "data_csv.drop('Maxpulse', axis=1, inplace=True)\n",
-    "data_csv"
+    "data_csv #dropping from main df"
    ],
    "id": "5fd7127b41f97e56",
    "outputs": [
@@ -4972,7 +4975,7 @@
    "source": [
     "data_csv = data_csv.dropna(subset=['Calories']).copy()  # Force a real copy\n",
     "data_csv.loc[:, 'Calories'] = data_csv['Calories'].astype(int)\n",
-    "data_csv.dtypes"
+    "data_csv.dtypes#convert data type"
    ],
    "id": "cd532c4bce4a6341",
    "outputs": [
@@ -5004,7 +5007,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "data_csv.plot.scatter(x='Duration', y='Calories', title='Scatter Plot: Duration vs Calories')\n",
-    "plt.show()"
+    "plt.show() #scatter plot"
    ],
    "id": "8d776fb39728ae23",
    "outputs": [
